--- a/idp/ansible/roles/ssh/templates/sshd_config.j2
+++ b/idp/ansible/roles/ssh/templates/sshd_config.j2
@@ -2,7 +2,7 @@
 # See the sshd_config(5) manpage for details
 
 # What ports, IPs and protocols we listen for
-Port 17689
+Port 22
 # Use these options to restrict which interfaces/protocols sshd will bind to
 #ListenAddress ::
 #ListenAddress 0.0.0.0
@@ -28,6 +28,10 @@ LoginGraceTime 120
 PermitRootLogin no
 StrictModes yes
 
+ClientAliveInterval 600
+ClientAliveCountMax 0
+
+
 RSAAuthentication yes
 PubkeyAuthentication yes
 #AuthorizedKeysFile     %h/.ssh/authorized_keys
@@ -49,7 +53,7 @@ PermitEmptyPasswords no
 ChallengeResponseAuthentication no
 
 # Change to no to disable tunnelled clear text passwords
-PasswordAuthentication no
+PasswordAuthentication yes
 
 # Kerberos options
 #KerberosAuthentication no
@@ -73,6 +77,10 @@ TCPKeepAlive yes
 
 # Allow client to pass locale environment variables
 AcceptEnv LANG LC_*
+
+VerifyReverseMapping yes
+AllowTcpForwarding no
+X11Forwarding no
 
 Subsystem sftp /usr/lib/openssh/sftp-server
 
