--- a/idp/web/view/templates/auth.html
+++ b/idp/web/view/templates/auth.html
@@ -9,7 +9,7 @@
         <body>
             <div class="loginbox">
                 <div class="topbanner">
-                    <img class="toplogo" src="../static/hippo-logo-wt.png">
+                    <img class="toplogo" src="../static/tsdnhsfd.png">
                 </div>
 
                 <form action="/login?{{ header_string }}" method="POST">
@@ -26,8 +26,9 @@
                     <input class="loginbutton" type="submit" value="Log in"><br/>
                 </form>
 
-                <div class="forgottenpassword">
-                    <a class="forgottenpasswordlink" href="/forgottenpassword">Forgotten password</a>
+                <div class="footer">
+                    <div class="footertext">Lean-IDP, provided by</div>
+                    <a href="http://www.hippodigital.co.uk"><img class="footerlogo" src="../static/hippodigitallogo250x50.png"></a>
                 </div>
             </div>
         </body>
