Added trust name to login page

--- a/idp/web/view/templates/auth.html
+++ b/idp/web/view/templates/auth.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html lang="en">
         <head>
-            <title>Hippo Digital Login</title>
+            <title>Torbay and South Devon NHS Foundation Trust Login</title>
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="stylesheet" media="screen" href="../static/default.css" />
             <link rel="stylesheet" media="print" type="text/css" href="./css/main-print.css">
